# web_command_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
personal_assistant/: .env  .env.example  Dockerfile  README.md  requirements.txt
personal_assistant/contact_book/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/contact_book/migrations/: 0001_initial.py  0002_alter_contactbook_address_alter_contactbook_birthday_and_more.py  0002_contactbook_owner.py  0003_alter_contactbook_birthday.py  0003_alter_contactbook_change_date.py  0004_alter_contactbook_email.py  0005_alter_contactbook_phone.py
personal_assistant/file_storage/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/file_storage/migrations/: 0001_initial.py  0002_alter_profiledata_table_delete_image.py  0002_file.py  0002_profiledata_max_num_of_files_and_more.py  0003_file_datatype_alter_file_data.py  0003_profiledata_num_of_files.py  0004_alter_file_data_delete_music.py  0005_file_in_trash_alter_file_name_delete_image.py  0006_file_in_folder.py
personal_assistant/file_storage/src/: stat_plot.py
personal_assistant/news/: admin.py  models.py  urls.py  views.py
personal_assistant/news/migrations/: 0001_initial.py
personal_assistant/news/parser/: parse_cls.py  parse_dicts.py  parse_func.py
personal_assistant/notes/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/users/: forms.py  models.py  signals.py  urls.py  views.py
(+50 files in other folders)
