[tool.poetry]
name = "command-project"
version = "0.1.0"
description = ""
authors = ["Andrii Truba <truba.a@icloud.com>"]
readme = "README.md"
packages = [{include = "command_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
