[tool.poetry]
name = "command-project"
version = "0.1.0"
description = ""
authors = ["Andrii Truba <truba.a@icloud.com>"]
readme = "README.md"
packages = [{include = "command_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
django-crispy-forms = "^1.14.0"
django-bootstrap-v5 = "^1.0.11"
django-bootstrap5 = "^22.2"
aiohttp = "^3.8.3"
fake-useragent = "^1.1.1"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
